fleshed out most of about page, added tournament top-16 decks for 2015-2020

--- a/about.html
+++ b/about.html
@@ -369,7 +369,24 @@ summary {
 </div>
 
 
+<div id="the-about-page" class="section level1">
+<h1>The About Page</h1>
 <p><a href="https://github.com/Juggereggnog/final_project_v1">My GitHub Repo</a></p>
+<div id="what-is-magic-the-gathering" class="section level3">
+<h3>What Is <em>Magic: The Gathering</em>?</h3>
+<p><em>Magic: The Gathering</em> was the first collectible trading card game ever made, created by Wizards of the Coast in 1993. It has been regularly releasing expansions to its collection of cards for over 25 years, and is played in both physical and digital formats.</p>
+<p>Two players construct a deck of 60 cards full of creatures, lands, artifacts, and more and battle against each other to bring their opponent’s life total from 20 to 0. With over 20,000 unique cards, the possibilities are daunting, trying to find the best combination of cards. The players who are able to find these combinations, and play them optimally, will eventually be invited to <em>Magic’s</em> premier tournament: the <em>Magic</em> World Championship.</p>
+</div>
+<div id="data-sources" class="section level3">
+<h3>Data Sources</h3>
+<p>I used up-to-date data from a website <a href="https://mtgjson.com/" class="uri">https://mtgjson.com/</a></p>
+</div>
+<div id="about-the-creator" class="section level3">
+<h3>About The Creator</h3>
+<p>Elias DeLeon is currently an undergraduate at Harvard University, studying philosophy and government, and computer science, and any other subject he can get his mind on.</p>
+<p>You can contact me at <a href="mailto:eliasdeleon@college.harvard.edu" class="email">eliasdeleon@college.harvard.edu</a> or view my other projects on my <a href="https://github.com/Juggereggnog">GitHub</a></p>
+</div>
+</div>
 
 
 
