--- a/about.html
+++ b/about.html
@@ -371,20 +371,24 @@ summary {
 
 <div id="the-about-page" class="section level1">
 <h1>The About Page</h1>
-<p><a href="https://github.com/Juggereggnog/final_project_v1">My GitHub Repo</a></p>
 <div id="what-is-magic-the-gathering" class="section level3">
 <h3>What Is <em>Magic: The Gathering</em>?</h3>
-<p><em>Magic: The Gathering</em> was the first collectible trading card game ever made, created by Wizards of the Coast in 1993. It has been regularly releasing expansions to its collection of cards for over 25 years, and is played in both physical and digital formats.</p>
+<p><em>Magic: The Gathering</em> was the first collectible trading card game ever made, created by Wizards of the Coast in 1993. It has received regular expansions to its collection of cards for over 25 years, and is played in both physical and digital formats.</p>
 <p>Two players construct a deck of 60 cards full of creatures, lands, artifacts, and more and battle against each other to bring their opponent’s life total from 20 to 0. With over 20,000 unique cards, the possibilities are daunting, trying to find the best combination of cards. The players who are able to find these combinations, and play them optimally, will eventually be invited to <em>Magic’s</em> premier tournament: the <em>Magic</em> World Championship.</p>
+<p>What I seek to do with this project is understand what goes into a top-tier <em>Magic</em> deck, and, because it is a “collectible” card game with a thriving marketplace, find out the total cost of the cards that comprise the deck. Many games these days are accused of being “play-to-win,” where those who can afford to buy the best cards are destined to win. But what is the cost of victory? And how does victory affect the cost of the cards? Read on!</p>
 </div>
 <div id="data-sources" class="section level3">
 <h3>Data Sources</h3>
-<p>I used up-to-date data from a website <a href="https://mtgjson.com/" class="uri">https://mtgjson.com/</a></p>
+<p>I used up-to-date data from a website called <a href="https://mtgjson.com/">MTGJSON</a>, which aptly provides card and price data in .json format. In addition, I scraped the decks of the top 16 players for each World Championship from 2015-2020. That data and similar data from other tournaments can be found on <a href="https://magic.wizards.com/en/events/coverage?source=MX_Nav2020"><em>Magic’s</em> official website</a>.</p>
+</div>
+<div id="plans-for-processing-data" class="section level3">
+<h3>Plans for Processing Data</h3>
+<p>As can be seen on <a href="https://github.com/Juggereggnog/final_project_v1">my GitHub repo</a>, the decks from each player is currently a .txt file, which I plan on converting into .csv files over the weekend. After creating the various tibbles, I intend to join them all to create one large tibble of all decks that ranked in the top 16 of a <em>Magic</em> World Championship. As for the .json file, MTGJSON would not let me download it from the link, instead opting to show the file in the web browser, crashing due to the sheer amount of text. I am now downloading it as a .csv / .bz2 file and am reading R documentation on reading it in, which should also be completed early in the weekend. Once reading it in, I intend on doing a left-joining the “MTGJSON” tibble to the “top 16” tibble, and going from there.</p>
 </div>
 <div id="about-the-creator" class="section level3">
 <h3>About The Creator</h3>
 <p>Elias DeLeon is currently an undergraduate at Harvard University, studying philosophy and government, and computer science, and any other subject he can get his mind on.</p>
-<p>You can contact me at <a href="mailto:eliasdeleon@college.harvard.edu" class="email">eliasdeleon@college.harvard.edu</a> or view my other projects on my <a href="https://github.com/Juggereggnog">GitHub</a></p>
+<p>You can contact me at <a href="mailto:eliasdeleon@college.harvard.edu" class="email">eliasdeleon@college.harvard.edu</a> or view my other projects on my <a href="https://github.com/Juggereggnog">GitHub</a>.</p>
 </div>
 </div>
 
