finally fixed deckify function!

--- a/read_in.html
+++ b/read_in.html
@@ -369,178 +369,41 @@ summary {
 </div>
 
 
-<pre><code>## Parsed with column specification:
-## cols(
-##   .default = col_double(),
-##   artist = col_character(),
-##   borderColor = col_character(),
-##   colorIdentity = col_character(),
-##   colorIndicator = col_logical(),
-##   colors = col_character(),
-##   duelDeck = col_logical(),
-##   faceConvertedManaCost = col_logical(),
-##   flavorText = col_character(),
-##   frameEffect = col_logical(),
-##   frameEffects = col_logical(),
-##   hand = col_logical(),
-##   layout = col_character(),
-##   leadershipSkills = col_character(),
-##   life = col_logical(),
-##   loyalty = col_logical(),
-##   manaCost = col_character(),
-##   mtgArenaId = col_logical(),
-##   name = col_character(),
-##   names = col_logical(),
-##   number = col_character()
-##   # ... with 21 more columns
-## )</code></pre>
-<pre><code>## See spec(...) for full column specifications.</code></pre>
-<pre><code>## Warning: 1472133 parsing failures.
-##  row       col           expected    actual                                    file
-## 3909 watermark 1/0/T/F/TRUE/FALSE set (NEM) &#39;raw-data/AllPrintingsCSVFiles.tar.bz2&#39;
-## 3910 watermark 1/0/T/F/TRUE/FALSE set (HOU) &#39;raw-data/AllPrintingsCSVFiles.tar.bz2&#39;
-## 3911 watermark 1/0/T/F/TRUE/FALSE set (M10) &#39;raw-data/AllPrintingsCSVFiles.tar.bz2&#39;
-## 3912 watermark 1/0/T/F/TRUE/FALSE set (DTK) &#39;raw-data/AllPrintingsCSVFiles.tar.bz2&#39;
-## 3913 watermark 1/0/T/F/TRUE/FALSE set (ONS) &#39;raw-data/AllPrintingsCSVFiles.tar.bz2&#39;
-## .... ......... .................. ......... .......................................
-## See problems(...) for more details.</code></pre>
-<pre><code>## Observations: 777,896
-## Variables: 71
-## $ `./`                   &lt;dbl&gt; 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13...
-## $ id                     &lt;dbl&gt; 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 1...
-## $ artist                 &lt;chr&gt; &quot;Rebecca Guay&quot;, &quot;Stephen Daniele&quot;, &quot;John Avo...
-## $ borderColor            &lt;chr&gt; &quot;black&quot;, &quot;black&quot;, &quot;black&quot;, &quot;black&quot;, &quot;black&quot;,...
-## $ colorIdentity          &lt;chr&gt; &quot;G&quot;, &quot;U&quot;, &quot;U,W&quot;, &quot;B&quot;, &quot;G&quot;, &quot;B&quot;, &quot;U&quot;, &quot;U&quot;, &quot;U...
-## $ colorIndicator         &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ colors                 &lt;chr&gt; &quot;G&quot;, &quot;U&quot;, NA, &quot;B&quot;, &quot;G&quot;, &quot;B&quot;, &quot;U&quot;, &quot;U&quot;, &quot;U&quot;, ...
-## $ convertedManaCost      &lt;dbl&gt; 4, 3, 0, 3, 2, 4, 5, 5, 3, 4, 4, 7, 7, 5, 5,...
-## $ duelDeck               &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ edhrecRank             &lt;dbl&gt; 980, 10548, 570, 15758, 9886, 16665, 10937, ...
-## $ faceConvertedManaCost  &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ flavorText             &lt;chr&gt; NA, &quot;They brandish their latest theories as ...
-## $ frameEffect            &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ frameEffects           &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ frameVersion           &lt;dbl&gt; 2003, 2003, 2003, 2003, 2003, 2003, 2003, 20...
-## $ hand                   &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ hasFoil                &lt;dbl&gt; 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1,...
-## $ hasNoDeckLimit         &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ hasNonFoil             &lt;dbl&gt; 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0,...
-## $ isAlternative          &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 1,...
-## $ isArena                &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isBuyABox              &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isDateStamped          &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isFullArt              &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isMtgo                 &lt;dbl&gt; 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...
-## $ isOnlineOnly           &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isOversized            &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isPaper                &lt;dbl&gt; 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...
-## $ isPromo                &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isReprint              &lt;dbl&gt; 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...
-## $ isReserved             &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isStarter              &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isStorySpotlight       &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isTextless             &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ isTimeshifted          &lt;dbl&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
-## $ layout                 &lt;chr&gt; &quot;normal&quot;, &quot;normal&quot;, &quot;normal&quot;, &quot;normal&quot;, &quot;nor...
-## $ leadershipSkills       &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, &quot;{&#39;brawl&#39;: F...
-## $ life                   &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ loyalty                &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ manaCost               &lt;chr&gt; &quot;{2}{G}{G}&quot;, &quot;{1}{U}{U}&quot;, NA, &quot;{2}{B}&quot;, &quot;{1}...
-## $ mcmId                  &lt;dbl&gt; 16413, 16227, 16511, 16289, 16414, 16290, 16...
-## $ mcmMetaId              &lt;dbl&gt; 19, 26, 42, 66, 76, 79, 81, 81, 132, 149, 14...
-## $ mtgArenaId             &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ mtgoFoilId             &lt;dbl&gt; 27283, 27275, 27385, 27483, 27361, 27387, 27...
-## $ mtgoId                 &lt;dbl&gt; 27282, 27274, 27384, 27482, 27360, 27386, 27...
-## $ multiverseId           &lt;dbl&gt; 130483, 132072, 129458, 135206, 130525, 1352...
-## $ name                   &lt;chr&gt; &quot;Abundance&quot;, &quot;Academy Researchers&quot;, &quot;Adarkar...
-## $ names                  &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ number                 &lt;chr&gt; &quot;249&quot;, &quot;63&quot;, &quot;347&quot;, &quot;125&quot;, &quot;250&quot;, &quot;126&quot;, &quot;64...
-## $ originalText           &lt;chr&gt; &quot;If you would draw a card, you may instead c...
-## $ originalType           &lt;chr&gt; &quot;Enchantment&quot;, &quot;Creature - Human Wizard&quot;, &quot;L...
-## $ otherFaceIds           &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ power                  &lt;chr&gt; NA, &quot;2&quot;, NA, NA, NA, NA, &quot;4&quot;, &quot;4&quot;, &quot;1&quot;, &quot;2&quot;,...
-## $ printings              &lt;chr&gt; &quot;10E,C17,DDR,USG&quot;, &quot;10E,USG&quot;, &quot;10E,5ED,6ED,7...
-## $ purchaseUrls           &lt;chr&gt; &quot;{&#39;cardmarket&#39;: &#39;https://mtgjson.com/links/2...
-## $ rarity                 &lt;chr&gt; &quot;rare&quot;, &quot;uncommon&quot;, &quot;rare&quot;, &quot;common&quot;, &quot;commo...
-## $ scryfallId             &lt;chr&gt; &quot;46184f97-d5c9-4a98-9fd9-e19057ce9b7e&quot;, &quot;b62...
-## $ scryfallIllustrationId &lt;chr&gt; &quot;4be12219-df08-4a40-b32f-69737db62615&quot;, &quot;cf5...
-## $ scryfallOracleId       &lt;chr&gt; &quot;eccc9a54-2b56-4a02-9926-258d5b2e25fb&quot;, &quot;df2...
-## $ setCode                &lt;chr&gt; &quot;10E&quot;, &quot;10E&quot;, &quot;10E&quot;, &quot;10E&quot;, &quot;10E&quot;, &quot;10E&quot;, &quot;1...
-## $ side                   &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...
-## $ subtypes               &lt;chr&gt; NA, &quot;Human,Wizard&quot;, NA, NA, NA, NA, &quot;Element...
-## $ supertypes             &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, &quot;Legendary&quot;,...
-## $ tcgplayerProductId     &lt;dbl&gt; 15023, 15024, 15025, 15026, 15027, 15028, 15...
-## $ text                   &lt;chr&gt; &quot;If you would draw a card, you may instead c...
-## $ toughness              &lt;chr&gt; NA, &quot;2&quot;, NA, NA, NA, NA, &quot;4&quot;, &quot;4&quot;, &quot;3&quot;, &quot;3&quot;,...
-## $ type                   &lt;chr&gt; &quot;Enchantment&quot;, &quot;Creature — Human Wizard&quot;, &quot;L...
-## $ types                  &lt;chr&gt; &quot;Enchantment&quot;, &quot;Creature&quot;, &quot;Land&quot;, &quot;Instant&quot;...
-## $ uuid                   &lt;chr&gt; &quot;1669af17-d287-5094-b005-4b143441442f&quot;, &quot;047...
-## $ variations             &lt;chr&gt; NA, NA, NA, NA, NA, NA, &quot;9d9ce25a-f48a-5b21-...
-## $ watermark              &lt;lgl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, ...</code></pre>
-<pre><code>## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )
-## Parsed with column specification:
-## cols(
-##   X1 = col_character()
-## )</code></pre>
+<pre><code>## Observations: 150
+## Variables: 7
+## $ Player      &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ X2          &lt;chr&gt; &quot;Goblin Rabblemaster (NON) 0&quot;, &quot;Jace, Vryn&#39;s Prodigy (N...
+## $ duplicates  &lt;chr&gt; &quot;2&quot;, &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, &quot;2&quot;, &quot;1&quot;, &quot;3&quot;, &quot;1&quot;, &quot;4&quot;, &quot;1&quot;, &quot;2&quot;, ...
+## $ from_set    &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ gatherer_id &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ card_name   &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ X3          &lt;dbl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...</code></pre>
+<pre><code>## Observations: 150
+## Variables: 7
+## $ Player      &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ X2          &lt;chr&gt; &quot;Tamiyo, Field Researcher (NON) 0&quot;, &quot;Duskwatch Recruite...
+## $ duplicates  &lt;chr&gt; &quot;1&quot;, &quot;2&quot;, &quot;2&quot;, &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, &quot;3&quot;, &quot;3&quot;, &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, ...
+## $ from_set    &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ gatherer_id &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ card_name   &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ X3          &lt;dbl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...</code></pre>
+<pre><code>## Observations: 150
+## Variables: 7
+## $ Player      &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ X2          &lt;chr&gt; &quot;Torrential Gearhulk (KLD) 67&quot;, &quot;The Scarab God (NON) 0...
+## $ duplicates  &lt;chr&gt; &quot;3&quot;, &quot;2&quot;, &quot;1&quot;, &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, &quot;1&quot;, &quot;3&quot;, ...
+## $ from_set    &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ gatherer_id &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ card_name   &lt;chr&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...
+## $ X3          &lt;dbl&gt; NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA,...</code></pre>
+<pre><code>## Observations: 150
+## Variables: 5
+## $ Player      &lt;chr&gt; &quot;Andrea-Mengucci&quot;, &quot;Andrea-Mengucci&quot;, &quot;Andrea-Mengucci&quot;...
+## $ duplicates  &lt;chr&gt; &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, &quot;4&quot;, &quot;3&quot;, &quot;4&quot;, &quot;4&quot;, &quot;3&quot;, &quot;4&quot;, &quot;4&quot;, &quot;18&quot;,...
+## $ from_set    &lt;chr&gt; &quot;GRN&quot;, &quot;RNA&quot;, &quot;M20&quot;, &quot;ELD&quot;, &quot;ELD&quot;, &quot;ELD&quot;, &quot;ELD&quot;, &quot;ELD&quot;,...
+## $ gatherer_id &lt;chr&gt; &quot; 115&quot;, &quot; 107&quot;, &quot; 159&quot;, &quot; 115&quot;, &quot; 120&quot;, &quot; 124&quot;, &quot; 137&quot;,...
+## $ card_name   &lt;chr&gt; &quot;Runaway Steam-Kin&quot;, &quot;Light Up the Stage&quot;, &quot;Scorch Spit...</code></pre>
+<p>Updates: I have been cleaning the data for years 2015-2018, finding regexes to extract their filenames for the table, and creating the tibbles for each year, to be joined altogether soon. I have also read in my master tibble of all magic cards, so my data is 80% read in at this point.</p>
 
 
 
